[package]
name = "rust-vpp"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { git = "https://github.com/ayourtch/rust-bindgen.git" }

